--- a/hello.html
+++ b/hello.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Welcome to my website</h1>
+    <h2>Hello, This is the second heading</h2>
     Hello, World.
 </body>
 </html>
